Added an image; Changed the name of the file blog.html to articles.html; Replaced the word Blog in a few places with Articles

--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,11 @@ body{
 	
 	width: 100%;
 	height: auto;
-	
+
+	background-image: 'media\Image.jpg';
+
+	/* background-image: url('media\Image.jpg'); */
+
 }
 
 a{
