--- a/static/css/style-articles.css
+++ b/static/css/style-articles.css
@@ -19,7 +19,6 @@
 	--main-links-color: #1F5673;                      
 	--main-active-links-color: #90C3C8;;             
 
-
 	--navbar-logo-color: #1F5673;
     /* --navbar-background-color: #344957; */
 	--navbar-background-color: #16232b;
@@ -36,7 +35,7 @@
 
 	font-family: var(--font);
 	color: var(--main-text-color);
-
+	
 	box-sizing: border-box;
 	text-align: center;
 
@@ -50,7 +49,11 @@ body{
 	
 	font-size: 1.8rem;
 	line-height: 1.5;
-	
+	background-color: var(--main-background-color);
+
+	display: flex;
+	flex-direction: column;
+
 }
 
 h1, h2, h3, h4, h5, h6, p, hr{
@@ -95,6 +98,7 @@ h4{
 
 p{
 
+	font-size: 1.6rem;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 
@@ -134,6 +138,8 @@ header{
 	position: fixed;
 	z-index: 999;
 	width: 100%;
+
+	/* margin-top: -3.3vh;		  /* Hacky: Have a look at this later */
 
 }
 
@@ -336,18 +342,292 @@ nav a:hover{
 
 }
 
+@media screen and (max-width: 320px) {
+
+	.logo{
+
+		font-size: 2.4rem;
+
+	}
+
+	nav a{
+
+		font-size: 1.6rem;
+
+	}
+
+
+}
+
+
 /* Header and Main Navigation Ends */
 
 
 
 /* Main Body */
 
-section{
+main{
 
-	background-color: var(--main-background-color);
-	
+	margin-top: 16vh;
+	margin-left: 5vw;
+	margin-right: 5vw;
 
 }
+
+.title{
+
+	font-weight: bold;
+
+}
+
+.description{
+
+
+}
+
+.search-wrap{
+
+	width: 80vw;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+
+	/* transform: translate(-50%, -50%); */
+
+}
+
+.search {
+
+	width: 100%;
+	position: relative;
+	display: flex;
+
+}
+  
+.searchTerm {
+
+	width: 100%;
+	border: 3px solid #00B4CC;
+	border-right: none;
+	padding: 5px;
+	height: 30px;
+	border-radius: 5px 0 0 5px;
+	outline: none;
+	color: #9DBFAF;
+
+}
+
+.searchTerm:focus{
+
+	color: var(--main-text-color);
+	
+}
+  
+.searchButton {
+
+	width: 40px;
+	height: 30px;
+	border: 1px solid #00B4CC;
+	background: #00B4CC;
+	text-align: center;
+	color: #fff;
+	border-radius: 0 5px 5px 0;
+	cursor: pointer;
+	font-size: 20px;
+
+}
+
+/* 
+.articles-chronologically{
+
+	text-align: left;
+
+} */
+
+.article-year{
+
+	text-align: left;
+	font-size: 2.6rem;
+	margin-bottom: -1.2rem;
+
+}
+
+.article-description{
+
+	text-align: left;
+	display: flex;
+	flex-direction: row;
+	margin-top: -0.5rem;
+
+}
+
+.article-date{
+
+	margin-left: 0vw;
+
+
+}
+
+.article-title{
+
+	margin-left: -40vw;
+
+}
+
+.article-date{
+
+	opacity: 0.6;
+
+}
+
+
+
+
+@media screen and (min-width: 800px) {
+
+	main, .search-wrap{
+
+		max-width: 60vw;
+		margin-left: auto;
+		margin-right: auto;
+
+	}
+
+	
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Below .searchButton */
+
+/* .article-search{
+
+	display: flex;
+	flex-direction: column;
+	gap: 0.4rem;
+
+} */
+
+/* 
+.search-bar{
+
+	width: 80vw;
+	height: 3rem;
+	margin-left: auto;
+	margin-right: auto;
+
+	margin-top: 16px;
+
+} */
+
+/* 	Web Dev Simplified
+
+
+input{
+	
+	font-size: 1.6rem;
+
+}
+
+.user-cards{
+
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+	gap: 0.4rem;
+	margin-top: 1rem;
+
+}
+
+.card{
+
+	border: 1px solid black;
+    background-color: white;
+	padding: 0.8rem;
+
+}
+
+.card-header{
+
+	font-size: 1.2rem;
+	color: #777;
+
+}
+
+.hide{
+
+	display: none;
+
+} */
+
 
 
 
